@@ -109,6 +109,14 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{}
+DECL|method|sendShortCircuitShmResponse ()
+specifier|public
+name|void
+name|sendShortCircuitShmResponse
+parameter_list|()
+throws|throws
+name|IOException
+block|{}
 block|}
 end_class
 
