@@ -52,6 +52,20 @@ end_import
 
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -943,6 +957,20 @@ name|PathState
 operator|.
 name|UNUSABLE
 argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|VisibleForTesting
+DECL|method|clearPathMap ()
+specifier|public
+name|void
+name|clearPathMap
+parameter_list|()
+block|{
+name|pathMap
+operator|.
+name|invalidateAll
+argument_list|()
 expr_stmt|;
 block|}
 block|}
