@@ -464,6 +464,24 @@ name|server
 operator|.
 name|datanode
 operator|.
+name|DataNodeFaultInjector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|datanode
+operator|.
 name|ShortCircuitRegistry
 import|;
 end_import
@@ -729,6 +747,40 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|invocation
+operator|.
+name|InvocationOnMock
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|stubbing
+operator|.
+name|Answer
 import|;
 end_import
 
@@ -4244,6 +4296,86 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|checkNumberOfSegmentsAndSlots (final int expectedSegments, final int expectedSlots, ShortCircuitRegistry registry)
+specifier|static
+specifier|private
+name|void
+name|checkNumberOfSegmentsAndSlots
+parameter_list|(
+specifier|final
+name|int
+name|expectedSegments
+parameter_list|,
+specifier|final
+name|int
+name|expectedSlots
+parameter_list|,
+name|ShortCircuitRegistry
+name|registry
+parameter_list|)
+block|{
+name|registry
+operator|.
+name|visit
+argument_list|(
+operator|new
+name|ShortCircuitRegistry
+operator|.
+name|Visitor
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|accept
+parameter_list|(
+name|HashMap
+argument_list|<
+name|ShmId
+argument_list|,
+name|RegisteredShm
+argument_list|>
+name|segments
+parameter_list|,
+name|HashMultimap
+argument_list|<
+name|ExtendedBlockId
+argument_list|,
+name|Slot
+argument_list|>
+name|slots
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|expectedSegments
+argument_list|,
+name|segments
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|expectedSlots
+argument_list|,
+name|slots
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 DECL|class|TestCleanupFailureInjector
 specifier|public
 specifier|static
@@ -4485,9 +4617,12 @@ name|t
 argument_list|)
 expr_stmt|;
 block|}
-name|ShortCircuitRegistry
-name|registry
-init|=
+name|checkNumberOfSegmentsAndSlots
+argument_list|(
+literal|1
+argument_list|,
+literal|1
+argument_list|,
 name|cluster
 operator|.
 name|getDataNodes
@@ -4500,66 +4635,324 @@ argument_list|)
 operator|.
 name|getShortCircuitRegistry
 argument_list|()
-decl_stmt|;
-name|registry
+argument_list|)
+expr_stmt|;
+name|cluster
 operator|.
-name|visit
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|sockDir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// Regression test for HADOOP-11802
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|60000
+argument_list|)
+DECL|method|testDataXceiverHandlesRequestShortCircuitShmFailure ()
+specifier|public
+name|void
+name|testDataXceiverHandlesRequestShortCircuitShmFailure
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|BlockReaderTestUtil
+operator|.
+name|enableShortCircuitShmTracing
+argument_list|()
+expr_stmt|;
+name|TemporarySocketDirectory
+name|sockDir
+init|=
+operator|new
+name|TemporarySocketDirectory
+argument_list|()
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+name|createShortCircuitConf
+argument_list|(
+literal|"testDataXceiverHandlesRequestShortCircuitShmFailure"
+argument_list|,
+name|sockDir
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|HdfsClientConfigKeys
+operator|.
+name|Read
+operator|.
+name|ShortCircuit
+operator|.
+name|STREAMS_CACHE_EXPIRY_MS_KEY
+argument_list|,
+literal|1000000000L
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|DistributedFileSystem
+name|fs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+specifier|final
+name|Path
+name|TEST_PATH1
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/test_file1"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH1
+argument_list|,
+literal|4096
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|,
+literal|0xFADE1
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Setting failure injector and performing a read which "
+operator|+
+literal|"should fail..."
+argument_list|)
+expr_stmt|;
+name|DataNodeFaultInjector
+name|failureInjector
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|DataNodeFaultInjector
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Mockito
+operator|.
+name|doAnswer
 argument_list|(
 operator|new
-name|ShortCircuitRegistry
-operator|.
-name|Visitor
+name|Answer
+argument_list|<
+name|Void
+argument_list|>
 argument_list|()
 block|{
 annotation|@
 name|Override
 specifier|public
-name|void
-name|accept
+name|Void
+name|answer
 parameter_list|(
-name|HashMap
-argument_list|<
-name|ShmId
+name|InvocationOnMock
+name|invocation
+parameter_list|)
+throws|throws
+name|Throwable
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"injected error into sendShmResponse"
+argument_list|)
+throw|;
+block|}
+block|}
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|failureInjector
+argument_list|)
+operator|.
+name|sendShortCircuitShmResponse
+argument_list|()
+expr_stmt|;
+name|DataNodeFaultInjector
+name|prevInjector
+init|=
+name|DataNodeFaultInjector
+operator|.
+name|instance
+decl_stmt|;
+name|DataNodeFaultInjector
+operator|.
+name|instance
+operator|=
+name|failureInjector
+expr_stmt|;
+try|try
+block|{
+comment|// The first read will try to allocate a shared memory segment and slot.
+comment|// The shared memory segment allocation will fail because of the failure
+comment|// injector.
+name|DFSTestUtil
+operator|.
+name|readFileBuffer
+argument_list|(
+name|fs
 argument_list|,
-name|RegisteredShm
-argument_list|>
-name|segments
-parameter_list|,
-name|HashMultimap
-argument_list|<
-name|ExtendedBlockId
-argument_list|,
-name|Slot
-argument_list|>
-name|slots
+name|TEST_PATH1
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"expected readFileBuffer to fail, but it succeeded."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
 parameter_list|)
 block|{
-name|Assert
+name|GenericTestUtils
 operator|.
-name|assertEquals
+name|assertExceptionContains
 argument_list|(
-literal|1
+literal|"TCP reads were disabled for "
+operator|+
+literal|"testing, but we failed to do a non-TCP read."
 argument_list|,
-name|segments
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|Assert
-operator|.
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|slots
-operator|.
-name|size
-argument_list|()
+name|t
 argument_list|)
 expr_stmt|;
 block|}
-block|}
+name|checkNumberOfSegmentsAndSlots
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+name|cluster
+operator|.
+name|getDataNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getShortCircuitRegistry
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Clearing failure injector and performing another read..."
+argument_list|)
+expr_stmt|;
+name|DataNodeFaultInjector
+operator|.
+name|instance
+operator|=
+name|prevInjector
+expr_stmt|;
+name|fs
+operator|.
+name|getClient
+argument_list|()
+operator|.
+name|getClientContext
+argument_list|()
+operator|.
+name|getDomainSocketFactory
+argument_list|()
+operator|.
+name|clearPathMap
+argument_list|()
+expr_stmt|;
+comment|// The second read should succeed.
+name|DFSTestUtil
+operator|.
+name|readFileBuffer
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH1
+argument_list|)
+expr_stmt|;
+comment|// We should have added a new short-circuit shared memory segment and slot.
+name|checkNumberOfSegmentsAndSlots
+argument_list|(
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+name|cluster
+operator|.
+name|getDataNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getShortCircuitRegistry
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|cluster
